# Vulkan-Toybox

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
common/: CMakeLists.txt
common/core/: device.cpp  device.h  instance.cpp  instance.h  physical_device.cpp  physical_device.h  surface.cpp  surface.h  window.cpp  window.h
common/graphics/: command_pool.cpp  command_pool.h  graphics_pipeline.cpp  graphics_pipeline.h  pipeline_builder.cpp  pipeline_builder.h  render_pass.cpp  render_pass.h  shader_module.cpp  shader_module.h  swap_chain.cpp  swap_chain.h
common/resources/buffers/: buffer.cpp  buffer.h  uniform_buffer.cpp  uniform_buffer.h  vertex_buffer.cpp  vertex_buffer.h
common/resources/descriptors/: descriptor_pool.cpp  descriptor_pool.h  descriptor_set_layout.cpp  descriptor_set_layout.h  descriptor_writer.cpp  descriptor_writer.h
common/resources/images/: color_image.cpp  color_image.h  depth_buffer.cpp  depth_buffer.h  image.cpp  image.h  texture.cpp  texture.h
common/resources/memory/: memory_allocator.cpp  memory_allocator.h
common/resources/model/: material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  texture_lib.cpp  texture_lib.h
common/sync/: fence.cpp  fence.h  frame_manager.cpp  frame_manager.h  frame_sync.cpp  frame_sync.h  semaphore.cpp  semaphore.h
toys/: CMakeLists.txt
toys/cube/: CMakeLists.txt  cube_app.cpp  cube_app.h  main.cpp
toys/cube/shaders/: cube.frag
toys/exploder/: CMakeLists.txt  cube_exploder.cpp  cube_exploder.h  main.cpp
toys/exploder/shaders/: cube.vert
toys/explosion/: CMakeLists.txt  explosion.cpp  explosion.h  main.cpp
toys/explosion/shaders/: explosion.geom
toys/model/: CMakeLists.txt  main.cpp  model_app.cpp  model_app.h
toys/model/nuka_cup/: nuka_cup.mtl
toys/model/shaders/: model.frag  model.vert
toys/triangle/: CMakeLists.txt  main.cpp  triangle_app.cpp  triangle_app.h
